inicio maquetacion home

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet />
+<header>
+    <app-home-nav></app-home-nav>
+</header>
+<main>
+    <div class="container">
+        <router-outlet />
+    </div>
+</main>
+
