--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,12 @@
-<p>home works!</p>
+<section>
+    <div class="d-flex justify-content-between py-4">
+        <button class="btn btn-danger">Prev</button><button class="btn btn-danger">Next</button>
+    </div>
+    <div class="row g-4 justify-content-center">
+        @for (user of arrUsers; track user.id) {
+            <article class="col-12 col-md-6 col-lg-3">
+                <app-user-card></app-user-card>
+            </article>
+        }
+    </div>
+</section>
