--- a/src/app/share/home-nav/home-nav.component.html
+++ b/src/app/share/home-nav/home-nav.component.html
@@ -1,1 +1,21 @@
-<p>home-nav works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center" [routerLink]="['/home']">
+            <img src="https://www.reshot.com/preview-assets/icons/4MKF9YN6VD/server-4MKF9YN6VD.svg" alt="Peticione Online Logo" height="30" class="d-inline-block align-text-top">
+            <span class="ms-2">Peticiones Online</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/home']">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['/newuser']">Nuevo Usuario</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
