--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,12 +1,18 @@
 <section>
-    <div class="d-flex justify-content-between py-4">
-        <button class="btn btn-danger">Prev</button><button class="btn btn-danger">Next</button>
+    <div>
+        <h2 class="text-2xl font-bold mt-4 text-center">Usuarios</h2>
     </div>
-    <div class="row g-4 justify-content-center">
+    <div class="row g-4 justify-content-center pt-4">
         @for (user of arrUsers; track user.id) {
-            <article class="col-12 col-md-6 col-lg-3">
-                <app-user-card></app-user-card>
+            <article class="col-12 col-md-6 col-lg-4 col-xl-3">
+                <app-user-card [miUser]="user"></app-user-card>
             </article>
         }
+    </div>
+    <hr>
+    <div class="d-flex justify-content-between pt-2 pb-3">
+        <button class="btn btn-danger" (click)="gotoPrev()">Prev</button>
+        <p>Página {{page}}/{{totalPages}}</p>
+        <button class="btn btn-danger" (click)="gotoNext()">Next</button>
     </div>
 </section>
