--- a/src/app/share/home-nav/home-nav.component.html
+++ b/src/app/share/home-nav/home-nav.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-md navbar-dark bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand d-flex align-items-center" [routerLink]="['/home']">
             <img src="https://www.reshot.com/preview-assets/icons/4MKF9YN6VD/server-4MKF9YN6VD.svg" alt="Peticione Online Logo" height="30" class="d-inline-block align-text-top">
