formulario de actualizacion de usuario completo

--- a/src/app/pages/user-form/user-form.component.html
+++ b/src/app/pages/user-form/user-form.component.html
@@ -1,1 +1,50 @@
-<p>user-form works!</p>
+<section class="container mt-5">
+    <h3 class="text-center display-4 mb-4">{{title}}</h3>
+    <hr>
+    <form class="mx-auto p-4 bg-white rounded shadow" [formGroup]="userForm" (ngSubmit)="getDataForm()" style="max-width: 700px;">
+        <input type="hidden" formControlName="_id">
+        <div class="mb-3">
+            <label for="first_name" class="form-label fw-bold">Nombre de usuario</label>
+            <input type="text" id="first_name" formControlName="first_name" class="form-control" placeholder="Ingresa tu nombre">
+            @if (checkControl('first_name', 'required')) {
+                <p class="error">El campo es obligatorio</p>
+            }
+            @if (checkControl('first_name', 'minlength')) {
+                <p class="error">El campo tiene que tener al menos 3 caracteres</p>
+            }
+        </div>
+        <div class="mb-3">
+            <label for="last_name" class="form-label fw-bold">Apellidos de usuario</label>
+            <input type="text" id="last_name" formControlName="last_name" class="form-control" placeholder="Ingresa tus apellidos">
+            @if (checkControl('last_name', 'required')) {
+                <p class="error">El campo es obligatorio</p>
+            }
+            @if (checkControl('last_name', 'minlength')) {
+                <p class="error">El campo tiene que tener al menos 2 caracteres</p>
+            }
+        </div>
+        <div class="mb-3">
+            <label for="email" class="form-label fw-bold">Email de usuario</label>
+            <input type="text" id="email" formControlName="email" class="form-control" placeholder="Ingresa tu email">
+            @if (checkControl('email', 'required')) {
+                <p class="error">El campo es obligatorio</p>
+            }
+            @if (checkControl('email', 'pattern')) {
+                <p class="error">El email es incorrecto</p>
+            }
+        </div>
+        <div class="mb-3">
+            <label for="image" class="form-label fw-bold">Imagen de usuario</label>
+            <input type="text" id="image" formControlName="image" class="form-control" placeholder="Ingresa la URL de tu imagen">
+            @if (checkControl('image', 'required')) {
+                <p class="error">El campo es obligatorio</p>
+            }
+            @if (checkControl('image', 'pattern')) {
+                <p class="error">El formato es incorrecto, debes ingresar una URL externa de una imagen</p>
+            }
+        </div>
+        <div class="d-flex justify-content-end">
+            <input type="submit" class="btn btn-primary w-100" [disabled]="userForm.invalid" [value]="userForm.get('_id')?.value ? 'Actualizar' : 'Guardar'">
+        </div>
+    </form>
+</section>
